# cicd-shell

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.adoc  Makefile  README.adoc  README.md  cicd-shell.cabal  cicd-shell.nix  default.nix  deploy.nix  hie.yaml  release.nix  salt.nix  set_nix.sh  shell.nix  stack.yaml  utils.sh
app/: Main.hs  Option.hs  PepCmd.hs  Type.hs
docker/: run.sh
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: CHANGELOG.adoc  index.adoc
share/: .nixpkgs.json  _cicd  completion.sh  default.nix  dev.nix  pin.nix  prod.nix  sandbox.nix  staging.nix  testing.nix
share/doc/: cicd-shell.html
src/Shell/: Cli.hs  Config.hs  Option.hs  Options.hs  PepCmd.hs  Prelude.hs  PuppetDB.hs  Target.hs  Type.hs
src/Shell/PepCmd/: Utils.hs
tests/Shell/: PepCmdTest.hs  [cicd,ci].dev.golden  [cicd].dev.golden  cicd-salt-master.golden  jenkins.sonarqube.dev.golden
