name:                cicd-shell
version:             2.7.2
synopsis:            Command line tool that interfaces cicd services
homepage:            ssh://git@stash.cirb.lan:7999/cicd/salt-shell.git
license:             BSD3
build-type:          Simple
category:            Utility
maintainer:          pradermecker@cirb.brussels
extra-source-files:  README.md
                     , tests/Shell/*.dev.golden
cabal-version:       1.12


Data-Files:
    share/*.nix
  , share/completion.sh
  , share/.nixpkgs.json
  , share/doc/cicd-shell.html
  , share/doc/cicd-shell.pdf

library
  hs-source-dirs:      src
  exposed-modules:     Shell.Type
                       , Shell.Cli
                       , Shell.Config
                       , Shell.PepCmd
                       , Shell.Prelude
                       , Shell.PepCmd.Utils
                       , Shell.PuppetDB
                       , Shell.Target
  other-modules:       Paths_cicd_shell
                       , Shell.Options
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , RecordWildCards
                       , OverloadedStrings
                       , StrictData
  build-depends:       base > 4.11 && < 5
                       , aeson
                       , concurrent-output >= 1.9
                       , dhall >= 1.19
                       , directory >= 1.3
                       , filepath >= 1.4
                       , haskeline >= 0.7
                       , lens >= 4.15.2
                       , neat-interpolation
                       , optparse-applicative >= 0.13
                       , prettyprinter >= 1.2
                       , prettyprinter-ansi-terminal >= 1.1
                       , raw-strings-qq
                       , req >= 2.1
                       , transformers >= 0.5
                       , process >= 1.4
                       , protolude >= 0.2
                       , text
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures

test-suite test
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is: Main.hs
  hs-source-dirs: tests
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , OverloadedStrings
                       , StrictData
  build-depends: base
                 , cicd-shell
                 , filepath
                 , tasty
                 , tasty-discover >= 4.2
                 , tasty-golden
                 , tasty-hunit
                 , text
  other-modules: Shell.PepCmdTest

executable cicd
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , OverloadedStrings
                       , StrictData
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , ascii-progress
                       , async >= 2.1
                       , cicd-shell
                       , directory >= 1.3
                       , lens >= 4.15.2
                       , text
                       , turtle >= 1.3.0
  default-language:    Haskell2010
