name:                cicd-shell
version:             2.8.6
synopsis:            Command line tool that interfaces cicd services
homepage:            ssh://git@stash.cirb.lan:7999/cicd/salt-shell.git
license:             BSD3
build-type:          Simple
category:            Utility
maintainer:          pradermecker@cirb.brussels
extra-source-files:  README.md
                     , tests/Shell/*.dev.golden
cabal-version:       2.0


Data-Files:
    share/*.nix
  , share/completion.sh
  , share/_cicd

library
  hs-source-dirs:      src
  exposed-modules:     Shell.Type
                       , Shell.Cli
                       , Shell.Config
                       , Shell.PepCmd
                       , Shell.Prelude
                       , Shell.PepCmd.Utils
                       , Shell.Target
  other-modules:       Paths_cicd_shell
                       , Shell.Options
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , RecordWildCards
                       , OverloadedStrings
                       , StrictData
  build-depends:       base > 4.12 && < 5
                       , aeson
                       , concurrent-output >= 1.10
                       , dhall >= 1.32
                       , directory >= 1.3
                       , filepath >= 1.4
                       , haskeline >= 0.7
                       , lens >= 4.18
                       , neat-interpolation
                       , optparse-applicative >= 0.16
                       , prettyprinter >= 1.6
                       , prettyprinter-ansi-terminal >= 1.1
                       , raw-strings-qq
                       , transformers >= 0.5
                       , process >= 1.6
                       , protolude >= 0.3
                       , text
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures

test-suite test
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is: Main.hs
  hs-source-dirs: tests
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , OverloadedStrings
                       , StrictData
  build-depends: base
                 , cicd-shell
                 , filepath
                 , tasty
                 , tasty-discover >= 4.2
                 , tasty-golden
                 , tasty-hunit
                 , text
  other-modules: Shell.PepCmdTest

executable cicd
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:    FlexibleContexts
                       , LambdaCase
                       , NoImplicitPrelude
                       , OverloadedStrings
                       , StrictData
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , ascii-progress
                       , async >= 2.2
                       , cicd-shell
                       , directory >= 1.3
                       , lens >= 4.18
                       , text
                       , turtle >= 1.5
  default-language:    Haskell2010
